# ecma376-office

./: README.md  hatch.toml  mypy.ini  pyproject.toml  ruff.toml  ruff_defaults.toml
src/ecma376_office/: __about__.py  __init__.py  api.py  constants.py  descriptor.py  exceptions.py  packuri.py  part.py  relationship.py  units.py  utils.py
src/ecma376_office/dml/: __init__.py  chart.py  constants.py  diagrame.py  media.py  parts.py  text.py  theme.py
src/ecma376_office/dml/style/: __init__.py  blip.py  color.py  effect.py  fill.py  font.py  format.py  line.py  properties.py  table.py
src/ecma376_office/dml/tool/: color.py  common.py
src/ecma376_office/opc/: __init__.py  constants.py  constants_bak.py  exceptions.py  package.py  parts.py  pkg_reader.py  zip_pkg.py
src/ecma376_office/oxml/: __init__.py  base.py  exceptions.py  utils.py  xsd_types.py
src/ecma376_office/oxml/dml/: __init__.py  chart.py  chart_drawing.py  diagram.py  locked_canvas.py  main.py  picture.py  spread_drawing.py  word_drawing.py
src/ecma376_office/oxml/opc/: __init__.py  content_types.py  core_properties.py  relationships.py
src/ecma376_office/oxml/pml/: __init__.py  core.py
src/ecma376_office/oxml/preset/: __init__.py  shapes.py
src/ecma376_office/oxml/shared/: __init__.py  additional_characteristics.py  bibliography.py  common_simple_types.py  custom_xml_data_pr.py  custom_xml_schema_pr.py  doc_custom_pr.py  doc_pr_extended.py  doc_pr_variant_types.py  math.py  (+1 more)
src/ecma376_office/pml/: __init__.py  background.py  common.py  constants.py  parts.py  placeholder.py  presentaion_pr.py  presentation.py  shapes.py  slide.py  slide_layout.py  slide_master.py  timing.py  transforms.py  view_properties.py
src/ecma376_office/preset/: shapes.py
src/ecma376_office/shared/: __init__.py  constants.py  image.py  parts.py  thumbnail.py  vedio.py
src/ecma376_office/sml/: __init__.py
src/ecma376_office/wml/: constants.py  font_table.py  number.py  parts.py  styles.py  wordprocessing.py
tests/: __init__.py
(+6 files in other folders)
